<resources>
    <string name="app_name">HandTrainer</string>
    <string name="start_info">CREATED BY Pavel Novak</string>

    <string name="hand_trainer">HAND TRAINER</string>

    <string name="login_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="repeat_password_hint">repeat password…</string>

    <string name="sign_in">Sign IN</string>
    <string name="sign_up">Sign UP</string>

    <string-array name="titles">
        <item>Training</item>
        <item>Statistic</item>
        <item>Log Out</item>
    </string-array>

    <string name="norm">Norm</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>

    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="save">Save</string>

    <string name="comment_hint">Training description</string>

    <string name="count">COUNT:</string>
    <string name="start_date">START DATE:</string>
    <string name="duration">DURATION:</string>
    <string name="type">TYPE:</string>
    <string name="comment">COMMENT:</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_login_text">LOGIN</string>
    <string name="btn_create_an_account_text">CREATE AN ACCOUNT</string>
    <string name="tv_or_text">or</string>
    <string name="et_confirm_password_text">Confirm password</string>
    <string name="create_an_account_txt">CREATE AN ACCOUNT</string>

    <string name="title_times_preset_30">30</string>
    <string name="unit_times">Times</string>
    <string name="title_times_preset_45">45</string>
    <string name="title_times_preset_60">60</string>
</resources>
