<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pavelnovak.com.mhandtrainer.AuthorizationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hand_trainer_logo"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_view"
            android:layout_marginStart="@dimen/margin_view"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="@dimen/padding_view"
            android:background="@drawable/edit_text_background"
            android:hint="@string/login_hint"
            android:maxLength="@integer/edit_text_max_length"
            android:inputType="textPersonName"
            android:layout_marginBottom="@dimen/margin_view"
            android:padding="@dimen/padding_view" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_view"
            android:layout_marginEnd="@dimen/margin_view"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/padding_view"
            android:layout_marginStart="@dimen/margin_view"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLength="@integer/edit_text_max_length"
            android:padding="@dimen/padding_view" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view"
            android:layout_marginStart="@dimen/margin_view"
            android:layout_marginEnd="@dimen/margin_view"
            android:background="@drawable/btn_login_background"
            android:textColor="@color/color_white"
            android:text="@string/btn_login_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_or_text"
            android:layout_margin="@dimen/margin_view"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/sign_up_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_view"
            android:layout_marginEnd="@dimen/margin_view"
            android:background="@drawable/btn_login_background"
            android:textColor="@color/color_white"
            android:text="@string/btn_create_an_account_text"/>

    </LinearLayout>



</RelativeLayout>
